--- a/css/style.css
+++ b/css/style.css
@@ -218,6 +218,4 @@ progress::-webkit-progress-value {
 
 
 
-#index-banner {
-    height:850px;
-}
+
